first implementation of ranges of numbers
