# docs/swagger.json
@@ -30,10 +30,8 @@
                         }
                     }
                 }
-            }
-        },
-        "/ranges": {
-            "get": {
+            },
+            "post": {
                 "description": "Get the roman numeral equivalent for given ranges in ascending order",
                 "produces": [
                     "application/json"
